Closed Bug 1124681 Opened 11 years ago Closed 5 years ago

[Mac] The checked state of a checkbox is not correctly exposed

Categories

(Core :: Disability Access APIs, defect, P1)

x86
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla76
Tracking Status
firefox76 --- verified

People

(Reporter: dtrebbien, Assigned: morgan)

References

Details

(Whiteboard: [mac2020_1])

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/600.2.5 (KHTML, like Gecko) Version/8.0.2 Safari/600.2.5 Steps to reproduce: 1. Go to the OpenAjax Alliance "Checkboxes using IMG elements for visual state" example: http://www.oaa-accessibility.org/examplep/checkbox1/ 2. Enable VoiceOver (⌘-F5). 3. Tab to the "Lettuce" checkbox. VoiceOver should announce something like: "Sandwich Condiments The best available organic romaine lettuce grown locally., unchecked, checkbox list Sandwich Condiments 4 items". This is correct because initially, the "Lettuce" checkbox is unchecked. 4. Press Control-Option-Space (VO-Space) to toggle the checkbox. Notice that the "Lettuce" checkbox is now checked, but VoiceOver announces something like: "uncheck Sandwich Condiments The best available organic romaine lettuce grown locally., checkbox". 5. Press tab to focus the "Tomato" checkbox. This checkbox is initially checked, but VoiceOver announces "unchecked". 6. Open Xcode's Accessibility Inspector developer tool. 7. Hover the mouse pointer over the "Tomato" checkbox. Notice that the "accessibilityValue" attribute is not set to 1. Actual results: VoiceOver always says "unchecked" for checkboxes, regardless of whether they actually are checked. I have tested Firefox 35.0 and Firefox Nightly 38.0a1 (2015-01-22) on Mac OS 10.10.1. Expected results: Firefox should behave like Safari 8.0.2, in which this OAA example works perfectly. If a checkbox is checked, VoiceOver should announce "checked". VoiceOver should only announce "unchecked" if the checkbox is unchecked (the element has aria-checked="false" or no aria-checked attribute).
Blocks: maca11y
Status: UNCONFIRMED → NEW
Ever confirmed: true
Hi All, I found a similar behavior on Firefox version 39.0. Description of the issue I have a dynamic list of elements to be displayed with check-boxes, so each element from my list can be enabled or disabled on demand. In order to reproduce this issue, I have displayed my dynamic list in Firefox and other browser (chrome, opera, ie, safari) so both are in the same status. Then I check (or un-check) any element from my list in the other browser, then go to the Firefox browser and press F5 to see the latest changes to my list; as result Firefox is displaying the check-boxes incorrectly. Something important to mention is that if I go to Firebug to see the DOM element, I can notice that the DOM element is correctly generated. However if I press Ctrl+F5, the dynamic list is properly displayed. By performing the inverse operation, I mean, by checking or un-checking any element from the list in FireFox and then refreshing the other browser, my list is properly displayed. In case it's useful, this issue was reproduced on Windows 7 Service Pack 1, 64 bits OS. I'll really appreciate any feedback you can provide. Thank you.
Whiteboard: [mac2020_1]
Priority: -- → P3
Priority: P3 → P2
Assignee: nobody → eitan
Assignee: eitan → mreschenberg
Priority: P2 → P1
Pushed by mreschenberg@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a02c028769f5 Query State() instead of NativeState() when deciding if a checkbox is checked. r=eeejay
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Flags: qe-verify+

Reproduced the issue using an affected Nightly from 2020-03-02, on macOS 10.15.

The issue described in comment 0, is not reproducing anymore on latest Beta 76.0b4 under macOS 10.15.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: