Bug 1124681: Query State() instead of NativeState() when deciding if a checkbox is checked. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D66489

--HG--
extra : moz-landing-system : lando